--- a/index.html
+++ b/index.html
@@ -148,7 +148,7 @@
                                 <i class="fa fa-compass fa-stack-1x text-primary"></i>
                             </span>
                                 <h4>
-                                    <strong>Service Name</strong>
+                                    <strong>Convenios de acercamiento al sistema de Salud y recuperación de cartera.</strong>
                                 </h4>
                                 <!--<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit.</p>-->
                                 <!--<a href="#" class="btn btn-light">Learn More</a>-->
@@ -161,7 +161,7 @@
                                 <i class="fa fa-flask fa-stack-1x text-primary"></i>
                             </span>
                                 <h4>
-                                    <strong>Service Name</strong>
+                                    <strong>Oferta de medicamentos POS y No Pos.</strong>
                                 </h4>
                                 <!--<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit.</p>-->
                                 <!--<a href="#" class="btn btn-light">Learn More</a>-->
@@ -174,7 +174,7 @@
                                 <i class="fa fa-shield fa-stack-1x text-primary"></i>
                             </span>
                                 <h4>
-                                    <strong>Service Name</strong>
+                                    <strong>Oferta del laboratorio Unidosis.</strong>
                                 </h4>
                                 <!--<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit.</p>-->
                                 <!--<a href="#" class="btn btn-light">Learn More</a>-->
@@ -189,7 +189,7 @@
                                 <i class="fa fa-cloud fa-stack-1x text-primary"></i>
                             </span>
                                 <h4>
-                                    <strong>Service Name</strong>
+                                    <strong>Oferta de tecnologiá biomédica.</strong>
                                 </h4>
                                 <!--<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit.</p>-->
                                 <!--<a href="#" class="btn btn-light">Learn More</a>-->
@@ -202,7 +202,7 @@
                                 <i class="fa fa-compass fa-stack-1x text-primary"></i>
                             </span>
                                 <h4>
-                                    <strong>Service Name</strong>
+                                    <strong> Soporte y diseño del programa de aseguramiento 14 metrológico.</strong>
                                 </h4>
                                 <!--<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit.</p>-->
                                 <!--<a href="#" class="btn btn-light">Learn More</a>-->
@@ -215,7 +215,7 @@
                                 <i class="fa fa-flask fa-stack-1x text-primary"></i>
                             </span>
                                 <h4>
-                                    <strong>Service Name</strong>
+                                    <strong>Soporte técnico para la calibración de equipos biomédicos.</strong>
                                 </h4>
                                 <!--<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit.</p>
                                 <a href="#" class="btn btn-light">Learn More</a>-->
@@ -228,7 +228,7 @@
                                 <i class="fa fa-shield fa-stack-1x text-primary"></i>
                             </span>
                                 <h4>
-                                    <strong>Service Name</strong>
+                                    <strong>Soporte técnico para mantenimiento correctivo y 16 preventivo de equipo biomédico.</strong>
                                 </h4>
                                 <!--<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit.</p>
                                 <a href="#" class="btn btn-light">Learn More</a>-->
@@ -243,7 +243,7 @@
                                 <i class="fa fa-cloud fa-stack-1x text-primary"></i>
                             </span>
                                 <h4>
-                                    <strong>Service Name</strong>
+                                    <strong> Oferta de dispositivos médicos e insumos.</strong>
                                 </h4>
                                 <!--<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit.</p>
                                 <a href="#" class="btn btn-light">Learn More</a>-->
@@ -256,7 +256,7 @@
                                 <i class="fa fa-compass fa-stack-1x text-primary"></i>
                             </span>
                                 <h4>
-                                    <strong>Service Name</strong>
+                                    <strong>Programa de entrenamiento en el manejo de equipos biomédicos para el personal asistencial.</strong>
                                 </h4>
                                 <!--<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit.</p>
                                 <a href="#" class="btn btn-light">Learn More</a>-->
@@ -269,7 +269,7 @@
                                 <i class="fa fa-flask fa-stack-1x text-primary"></i>
                             </span>
                                 <h4>
-                                    <strong>Service Name</strong>
+                                    <strong> Asesoría y acompañamiento para el sedarrollo de modelos de atención.</strong>
                                 </h4>
                                 <!--<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit.</p>
                                 <a href="#" class="btn btn-light">Learn More</a>-->
@@ -282,7 +282,7 @@
                                 <i class="fa fa-shield fa-stack-1x text-primary"></i>
                             </span>
                                 <h4>
-                                    <strong>Service Name</strong>
+                                    <strong>Programa de entrenamiento en el manejo de equipos biomédicos para el personal asistencial.</strong>
                                 </h4>
                                 <!--<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit.</p>
                                 <a href="#" class="btn btn-light">Learn More</a>-->
@@ -297,7 +297,7 @@
                                 <i class="fa fa-cloud fa-stack-1x text-primary"></i>
                             </span>
                                 <h4>
-                                    <strong>Service Name</strong>
+                                    <strong>Programas de capacitación en el área de la salud para el personal asistencial.</strong>
                                 </h4>
                                 <!--<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit.</p>
                                 <a href="#" class="btn btn-light">Learn More</a>-->
@@ -310,7 +310,7 @@
                                 <i class="fa fa-compass fa-stack-1x text-primary"></i>
                             </span>
                                 <h4>
-                                    <strong>Service Name</strong>
+                                    <strong>Oferta de equipos para la información y comunicación.</strong>
                                 </h4>
                                 <!--<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit.</p>
                                 <a href="#" class="btn btn-light">Learn More</a>-->
@@ -323,7 +323,7 @@
                                 <i class="fa fa-flask fa-stack-1x text-primary"></i>
                             </span>
                                 <h4>
-                                    <strong>Service Name</strong>
+                                    <strong>Oferta de papelería y material de oficina.</strong>
                                 </h4>
                                 <!--<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit.</p>
                                 <a href="#" class="btn btn-light">Learn More</a>-->
@@ -336,7 +336,7 @@
                                 <i class="fa fa-shield fa-stack-1x text-primary"></i>
                             </span>
                                 <h4>
-                                    <strong>Service Name</strong>
+                                    <strong>Oferta de material para odontología.</strong>
                                 </h4>
                                 <!--<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit.</p>
                                 <a href="#" class="btn btn-light">Learn More</a>-->
