--- a/index.html
+++ b/index.html
@@ -370,7 +370,7 @@
                             </div>
                         </div>
                         <div class="col-md-3 col-sm-6">
-                            <div class="service-item">
+                            <!--<div class="service-item">
                                 <span class="fa-stack fa-4x">
                                 <i class="fa fa-circle fa-stack-2x"></i>
                                 <i class="fa fa-flask fa-stack-1x text-primary"></i>
@@ -378,12 +378,12 @@
                                 <h4>
                                     <strong>Service Name</strong>
                                 </h4>
-                                <!--<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit.</p>
-                                <a href="#" class="btn btn-light">Learn More</a>-->
-                            </div>
+                                &lt;!&ndash;<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit.</p>
+                                <a href="#" class="btn btn-light">Learn More</a>&ndash;&gt;
+                            </div>-->
                         </div>
                         <div class="col-md-3 col-sm-6">
-                            <div class="service-item">
+                            <!--<div class="service-item">
                                 <span class="fa-stack fa-4x">
                                 <i class="fa fa-circle fa-stack-2x"></i>
                                 <i class="fa fa-shield fa-stack-1x text-primary"></i>
@@ -391,9 +391,9 @@
                                 <h4>
                                     <strong>Service Name</strong>
                                 </h4>
-                                <!--<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit.</p>
-                                <a href="#" class="btn btn-light">Learn More</a>-->
-                            </div>
+                                &lt;!&ndash;<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit.</p>
+                                <a href="#" class="btn btn-light">Learn More</a>&ndash;&gt;
+                            </div>-->
                         </div>
                     </div>
                     <!-- /.row (nested) -->
