--- a/index.html
+++ b/index.html
@@ -350,7 +350,7 @@
                                 <i class="fa fa-cloud fa-stack-1x text-primary"></i>
                             </span>
                                 <h4>
-                                    <strong>Service Name</strong>
+                                    <strong>Formación integral en competencias de la salud y prácticas de buen Gobierno.</strong>
                                 </h4>
                                 <!--<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit.</p>
                                 <a href="#" class="btn btn-light">Learn More</a>-->
@@ -363,7 +363,7 @@
                                 <i class="fa fa-compass fa-stack-1x text-primary"></i>
                             </span>
                                 <h4>
-                                    <strong>Service Name</strong>
+                                    <strong>Formación continua, acompañamiento y consecución de recursos para el desarrollo científico y tecnológico</strong>
                                 </h4>
                                 <!--<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit.</p>
                                 <a href="#" class="btn btn-light">Learn More</a>-->
