--- a/index.html
+++ b/index.html
@@ -18,9 +18,10 @@
     <link href="css/stylish-portfolio.css" rel="stylesheet">
 
     <!-- Custom Fonts -->
-    <link rel="stylesheet" href="css/style.css">
+
     <link href="font-awesome/css/font-awesome.min.css" rel="stylesheet" type="text/css">
     <link href="http://fonts.googleapis.com/css?family=Source+Sans+Pro:300,400,700,300italic,400italic,700italic" rel="stylesheet" type="text/css">
+
 
     <!-- HTML5 Shim and Respond.js IE8 support of HTML5 elements and media queries -->
     <!-- WARNING: Respond.js doesn't work if you view the page via file:// -->
@@ -62,7 +63,7 @@
     <!-- Header -->
     <header id="top" class="header">
         <div class="text-vertical-center">
-            <h1>Start Bootstrap</h1>
+            <img src="img/logo.svg" alt="imagen SVG" title="" />
             <h3>Free Bootstrap Themes &amp; Templates</h3>
             <br>
             <!----><a href="#about" class="btn btn-dark btn-lg">Find Out More</a>
@@ -130,8 +131,7 @@
                         <div class="col-md-3 col-sm-6">
                             <div class="service-item">
                                 <span class="fa-stack fa-4x">
-                                <i class="fa fa-circle fa-stack-2x"></i>
-                                <i class="fa fa-cloud fa-stack-1x text-primary"></i>
+                                    <i class=" fa icon-3 text-primary fa-stack-2x" style="color: white"></i>
                             </span>
                                 <h4>
                                     <strong>Oferta de servicios para el manejo ambiental de residuos hospitalarios y peligrosos.</strong>
