--- a/index.html
+++ b/index.html
@@ -63,7 +63,7 @@
     <!-- Header -->
     <header id="top" class="header">
         <div class="text-vertical-center">
-            <img src="img/logo.svg" alt="imagen SVG" title="" />
+            <img src="img/logo.svg" style="width: 50%; height: 50%; margin: auto" alt="imagen SVG" title="" />
             <h3>Free Bootstrap Themes &amp; Templates</h3>
             <br>
             <!----><a href="#about" class="btn btn-dark btn-lg">Find Out More</a>
